# lux

./: .gitignore  Cargo.toml  LICENSE  README.md  algo.sh  assert.sh  doc.md  grammar.ebnf  readme.md
algos/: binary_search.lux  fact.lux  fib.lux  quicksort.lux
scripts/: algo.sh  assert.sh  get_errors.sh
src/: ast.rs  cli.rs  compiler.rs  constants.rs  error.rs  lexer.rs  main.rs  parser.rs  prism.rs  token.rs  typechecker.rs  value.rs
src/bytecode/: mod.rs
src/codegen/: mod.rs  old_compiler.rs
src/syntax/: ast.rs  lexer.rs  mod.rs  parser.rs  precedence.rs  token.rs
src/tir/: ids.rs
src/typecheck/: mod.rs  typechecker.rs
src/types/: lux_type.rs  mod.rs
src/vm/: mod.rs  prism.rs  value.rs
test/: bugs.lux  closure.lux  main.lux  zero_values.lux
test/decl/: func.lux  scope.lux
test/expr/: arrays.lux  assign.lux  basics.lux  call_multiple.lux  lambdas.lux  let_scope_shadow.lux  local_vs_global.lux  photon_logic.lux  photon_short_circuit.lux  recursion.lux  return.lux  scope.lux
test/stmt/: facets.lux  for.lux  if_else.lux  switch.lux
